attempt to fix mobile only overflow bug

--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -8,6 +8,7 @@
 	height: 60px;
 	justify-content: space-between;
 	text-align: center;
+	overflow: hidden;
 
 	> a {
 		color: var(--text-color);
